--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,22 @@
 Message=Hello from github
+#spring.cloud.config.uri=http://localhost:8888
+
+
+server.port=8081
+management.endpoints.web.exposure.include=*
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/new_db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.jackson.serialization.fail-on-empty-beans=false
+server.error.include-stacktrace=never
+spring.security.user.name=padma	
+spring.security.user.password=123
+
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+
+
